RESOLVED FIXED148991
HTMLTableElement.tHead / tFoot / caption should be nullable
https://bugs.webkit.org/show_bug.cgi?id=148991
Summary HTMLTableElement.tHead / tFoot / caption should be nullable
Chris Dumez
Reported 2015-09-08 20:39:03 PDT
HTMLTableElement.tHead / tFoot / caption should be nullable as per the specification: https://html.spec.whatwg.org/multipage/tables.html#htmltableelement Setting those to null in WebKit will nullify them but it will then throw a "NotFoundError: DOM Exception 8" due to an implementation bug.
Attachments
Patch (11.77 KB, patch)
2015-09-08 21:49 PDT, Chris Dumez
no flags
Patch (12.81 KB, patch)
2015-09-08 21:54 PDT, Chris Dumez
no flags
Chris Dumez
Comment 1 2015-09-08 21:49:29 PDT
Chris Dumez
Comment 2 2015-09-08 21:54:39 PDT
WebKit Commit Bot
Comment 3 2015-09-09 01:49:30 PDT
Comment on attachment 260832 [details] Patch Clearing flags on attachment: 260832 Committed r189537: <http://trac.webkit.org/changeset/189537>
WebKit Commit Bot
Comment 4 2015-09-09 01:49:34 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.