HTMLTableElement.tHead / tFoot / caption should be nullable https://bugs.webkit.org/show_bug.cgi?id=148991

Reviewed by Ryosuke Niwa.

Source/WebCore:

According to the specification, HTMLTableElement.tHead / tFoot / caption
should be nullable:
https://html.spec.whatwg.org/multipage/tables.html#htmltableelement

Upon assigning null, we are supposed to remove the existing tHead / tFoot
/ caption element. However, we had a bug causing us to throw an exception
after removing the element. This is because we would try to insert a null
element and ContainerNode::insertBefore() throws when doing so.

Also, as per the specification, setting tHead / tFoot to something else
than a thead / tfoot element should throw a HierarchyRequestError:
https://html.spec.whatwg.org/multipage/tables.html#dom-table-thead
https://html.spec.whatwg.org/multipage/tables.html#dom-table-tfoot

Previously, WebKit did not check the tag and was happy inserting the
element as long as it was an HTMLTableSectionElement. This means that
you could set a tfoot by assigning table.tHead.

This patch corrects both bugs and adds test coverage for it.

Test: fast/dom/HTMLTableElement/nullable-attributes.html

* html/HTMLTableElement.cpp:
(WebCore::HTMLTableElement::setCaption):
Only call insertBefore() if newCaption is not null as insertBefore()
will throw an exception otherwise.

(WebCore::HTMLTableElement::setTHead):
- Throw a HierarchyRequestError if the HTMLTableSectionElement is not
  null or a <thead> element, as per the specification.
- Only call insertBefore() if newHead is not null as insertBefore()
  will throw an exception otherwise.

(WebCore::HTMLTableElement::setTFoot):
- Throw a HierarchyRequestError if the HTMLTableSectionElement is not
  null or a <tfoot> element, as per the specification.
- Only call insertBefore() if newFoot is not null as insertBefore()
  will throw an exception otherwise.

* html/HTMLTableElement.idl:
Use [StrictTypeChecking] for these 3 attributes so that the bindings
will throw a TypeError if the JS tries to assign a value with the
wrong type. When the implementation is called with null, we now know
this is because the JS assigned null (and not an invalid value).
This is important as assigning null is valid since those attributes
are nullable.

LayoutTests:

Add new test that covers the behavior of the following HTMLTableElement
attributes: caption / tHead / tFoot.

* fast/dom/HTMLTableElement/nullable-attributes-expected.txt: Added.
* fast/dom/HTMLTableElement/nullable-attributes.html: Added.
* fast/dom/setter-type-enforcement-expected.txt:


Canonical link: https://commits.webkit.org/167090@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@189537 268f45cc-cd09-0410-ab3c-d52691b4dbfc